--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,6 +3,5 @@
 .layout {
   position: relative;
   // margin: auto;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
