--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -27,7 +27,7 @@
   --jl-safearea-padding: 3rem;
 
   @media #{$sm-device} {
-    --jl-safearea-padding: 2rem;
+    --jl-safearea-padding: 2.5rem;
   }
 }
 
